Proyecto estático Aguanta la música

--- a/acerca.html
+++ b/acerca.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contactanos.html">Contáctanos</a>
@@ -147,7 +147,7 @@
         <div class="socials">
             <a href="https://www.linkedin.com/company/aguantalamusica/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
             <a href="https://www.instagram.com/aguantalamusica/" target="_blank" rel="noopener noreferrer">Instagram</a>
-            <a href="index.html">FAQs</a>
+            <a href="faqs.html">FAQs</a>
         </div>
     </div>
 </footer>
