--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contactanos.html">Contáctanos</a>
